force-app/main/default/objects/Storage_Strategy__c/Storage_Strategy__c.object-meta.xml
<CustomObject>
    <label>Storage Strategy</label>
    <nameField>
        <label>Storage Strategy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Storage Strategies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>