force-app/main/default/objects/Storage_Strategy__c/fields/April_Change__c.field-meta.xml
<CustomField>
    <fullName>April_Change__c</fullName>
    <formula>April__c - March__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>April Change</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>