force-app/main/default/objects/Storage_Strategy__c/fields/August_Change__c.field-meta.xml
<CustomField>
    <fullName>August_Change__c</fullName>
    <formula>August__c - July__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>August Change</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>