force-app/main/default/objects/Storage_Strategy__c/fields/December_Change__c.field-meta.xml
<CustomField>
    <fullName>December_Change__c</fullName>
    <formula>December__c - November__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>December Change</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>