force-app/main/default/objects/Storage_Strategy__c/fields/February_Change__c.field-meta.xml
<CustomField>
    <fullName>February_Change__c</fullName>
    <formula>February__c - January__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>February Change</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>