force-app/main/default/objects/Storage_Strategy__c/fields/January_Change__c.field-meta.xml
<CustomField>
    <fullName>January_Change__c</fullName>
    <description>delta between this month and the previous month.</description>
    <formula>January__c - December__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>delta between this month and the previous month.</inlineHelpText>
    <label>January Change</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>