force-app/main/default/objects/Storage_Strategy__c/fields/July__c.field-meta.xml
<CustomField>
    <fullName>July__c</fullName>
    <defaultValue>0</defaultValue>
    <label>July</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>