force-app/main/default/objects/Storage_Strategy__c/fields/July_Change__c.field-meta.xml
<CustomField>
    <fullName>July_Change__c</fullName>
    <formula>July__c - June__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>July Change</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>