force-app/main/default/objects/Storage_Strategy__c/fields/June_Change__c.field-meta.xml
<CustomField>
    <fullName>June_Change__c</fullName>
    <formula>June__c - May__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>June Change</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>