force-app/main/default/objects/Storage_Strategy__c/fields/March_Change__c.field-meta.xml
<CustomField>
    <fullName>March_Change__c</fullName>
    <formula>March__c - February__c</formula>
    <label>March Change</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>