force-app/main/default/objects/Storage_Strategy__c/fields/May_Change__c.field-meta.xml
<CustomField>
    <fullName>May_Change__c</fullName>
    <formula>May__c - April__c</formula>
    <label>May Change</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>