force-app/main/default/objects/Storage_Strategy__c/fields/November_Change__c.field-meta.xml
<CustomField>
    <fullName>November_Change__c</fullName>
    <formula>November__c - October__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>November Change</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>