force-app/main/default/objects/Storage_Strategy__c/fields/October_Change__c.field-meta.xml
<CustomField>
    <fullName>October_Change__c</fullName>
    <formula>October__c - September__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>October Change</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>