force-app/main/default/objects/Storage_Strategy__c/fields/September_Change__c.field-meta.xml
<CustomField>
    <fullName>September_Change__c</fullName>
    <formula>September__c - August__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>September Change</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>