force-app/main/default/objects/Storage_Strategy__c/listViews/Houston.listView-meta.xml
<ListView>
    <fullName>Houston</fullName>
    <columns>NAME</columns>
    <columns>January__c</columns>
    <columns>February__c</columns>
    <columns>March__c</columns>
    <columns>April__c</columns>
    <columns>May__c</columns>
    <columns>June__c</columns>
    <columns>July__c</columns>
    <columns>August__c</columns>
    <columns>September__c</columns>
    <columns>October__c</columns>
    <columns>November__c</columns>
    <columns>December__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Live_ID__c</field>
        <operation>startsWith</operation>
        <value>HOU</value>
    </filters>
    <label>Houston</label>
</ListView>